# financial_fraud

./: .env  .gitignore  README.md  mas_scraper.py  news_api_articles.py  ollama_reuters_newapi_article.py  ollama_sec_summary.py  pyproject.toml  reuters_scraper.py  sec_scraper.py  streamlit.py  test.py  utils.py
notebooks/: FAISS.ipynb  NewsAPI.ipynb  ScraperData.ipynb
