[project]
name = "finacial-fraudsters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "requests>=2.32.3",
    "spacy>=3.8.4",
    "transformers>=4.36.0",
    "pandas>=2.1.4",
    "torch>=2.6.0",
    "crewai[tools]>=0.102.0",
    "playwright>=1.50.0",
    "streamlit>=1.43.1",
    "faiss-cpu>=1.10.0",
    "ollama>=0.4.7",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "selenium>=4.29.0",
]

[dependency-groups]
dev = [
    "pip>=25.0.1",
]
